[metadata]
name = clubbi_utils
version = 2.2.0

[options]
packages = find_namespace:
install_requires =
    sqlalchemy>=1.4,<1.5

[options.extras_require]
pydantic = pydantic>=1.9.1,<2
orjson = orjson>=3.6.6,<4
postgresql = sqlalchemy[postgresql_asyncpg]>=1.4,<1.5
mysql = sqlalchemy[asyncmy]>=1.4,<1.5


[tool:pytest]
addopts = -p no:warnings
testpaths = tests
timeout = 10
filterwarnings =
    error
    ignore::DeprecationWarning:distutils

[coverage:run]
source = clubbi_utils
branch = True

[coverage:report]
precision = 2
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    raise NotImplemented
    if TYPE_CHECKING:
    @overload
show_missing = true
sort = Name

[flake8]
ignore = E203, E266, E501, W503
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist,venv,.venv

[yapf]
based_on_style = pep8
column_limit = 200

[mypy]
plugins = pydantic.mypy
show_error_codes = True
follow_imports = silent
strict_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
check_untyped_defs = True
no_implicit_reexport = False
warn_unused_configs = True
disallow_incomplete_defs = True
ignore_missing_imports = True

